# chatbot

./: pyproject.toml
.idx/: dev.nix
src/: index.html  main.py
